feat: add PWA support with manifest and icons; update robots.txt and .gitignore

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png+xml" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#FFFFFF">
     <title>Localyodis</title>
+    <meta name="description" content="A local rss reader" />
   </head>
   <body>
     <div id="root"></div>
